--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-jasmine-node": "^0.3.1",
     "jit-grunt": "^0.9.1"
   }
 }
