Build empty report

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jasmine-nodejs": "^1.4.0",
     "jit-grunt": "^0.9.1"
+  },
+  "dependencies": {
+    "js2xmlparser": "^0.1.9"
   }
 }
