--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jit-grunt": "^0.9.1"
   },
   "dependencies": {
-    "js2xmlparser": "^0.1.9"
+    "lodash": "^3.8.0",
+    "mkdirp": "^0.5.0",
+    "xmlbuilder": "^2.6.2"
   }
 }
