--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "builder"
   ],
   "author": "David Pärsson <david@parsson.se>",
-  "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/davidparsson/junit-report-builder/blob/master/LICENSE"
+    }
+  ],
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
