--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jasmine-nodejs": "^1.4.0",
+    "grunt-release": "^0.12.0",
     "jit-grunt": "^0.9.1"
   },
   "dependencies": {
