--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
       "url": "https://github.com/davidparsson/junit-report-builder/blob/master/LICENSE"
     }
   ],
+  "bugs": {
+    "url": "https://github.com/davidparsson/junit-report-builder/issues"
+  },
+  "homepage": "https://github.com/davidparsson/junit-report-builder",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
