--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jasmine-nodejs": "^1.4.0",
     "grunt-release": "^0.12.0",
-    "jit-grunt": "^0.9.1"
+    "jit-grunt": "^0.9.1",
+    "rimraf": "^2.3.3"
   },
   "dependencies": {
     "lodash": "^3.8.0",
