--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jasmine-nodejs": "^1.4.0",
+    "grunt-jsdoc-to-markdown": "^1.1.1",
     "grunt-release": "^0.12.0",
     "jit-grunt": "^0.9.1",
     "rimraf": "^2.3.3",
