--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "grunt-jasmine-nodejs": "^1.4.0",
     "grunt-release": "^0.12.0",
     "jit-grunt": "^0.9.1",
-    "rimraf": "^2.3.3"
+    "rimraf": "^2.3.3",
+    "time-grunt": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^3.8.0",
