--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rimraf": "^2.3.3"
   },
   "dependencies": {
+    "dateformat": "^1.0.11",
     "lodash": "^3.8.0",
     "mkdirp": "^0.5.0",
     "xmlbuilder": "^2.6.2"
