--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "time-grunt": "^1.2.1"
   },
   "dependencies": {
-    "lodash": "^3.8.0",
+    "date-format": "0.0.2",
+    "lodash": "^4.17.10",
     "mkdirp": "^0.5.0",
-    "xmlbuilder": "^2.6.2",
-    "date-format": "0.0.2"
+    "xmlbuilder": "^10.0.0"
   }
 }
