--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "url": "https://github.com/davidparsson/junit-report-builder/issues"
   },
   "homepage": "https://github.com/davidparsson/junit-report-builder",
+  "engines" : {
+    "node" : ">=4"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.2",
