--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "date-format": "0.0.2",
+    "lodash": "^4.17.21",
     "make-dir": "^1.3.0",
     "xmlbuilder": "^15.1.1"
   }
