--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "prepublish": "grunt",
-    "test": "grunt"
+    "test": "grunt",
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "grunt-jasmine-nodejs": "1.4.0",
     "grunt-release": "^0.12.0",
     "jit-grunt": "^0.9.1",
+    "release-it": "^15.1.3",
     "rimraf": "^2.3.3",
     "time-grunt": "^1.2.1"
   },
@@ -41,5 +43,10 @@
     "lodash": "^4.17.21",
     "make-dir": "^3.1.0",
     "xmlbuilder": "^15.1.1"
+  },
+  "release-it": {
+    "github": {
+      "release": true
+    }
   }
 }
