Run tests before releasing

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   "release-it": {
     "github": {
       "release": false
+    },
+    "hooks": {
+      "before:init": ["npm test"]
     }
   }
 }
