--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "prepublish": "grunt",
+    "check": "prettier --check .",
+    "format": "prettier --write .",
     "test": "grunt",
     "release": "release-it"
   },
@@ -34,6 +36,7 @@
     "grunt-jasmine-nodejs": "1.4.0",
     "grunt-release": "^0.12.0",
     "jit-grunt": "^0.9.1",
+    "prettier": "^3.0.3",
     "release-it": "^15.1.3",
     "rimraf": "^2.3.3",
     "time-grunt": "^1.2.1"
@@ -49,7 +52,9 @@
       "release": false
     },
     "hooks": {
-      "before:init": ["npm test"]
+      "before:init": [
+        "npm test"
+      ]
     }
   }
 }
