Check formatting before releasing

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     },
     "hooks": {
       "before:init": [
-        "npm test"
+        "npm test",
+        "npm run check"
       ]
     }
   }
