--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "node": ">=8"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "coffeescript": "^2.7.0",
+    "grunt": "^1.6.1",
     "grunt-contrib-jshint": "^3.2.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-jasmine-nodejs": "1.4.0",
-    "jit-grunt": "^0.9.1",
+    "grunt-jasmine-nodejs": "^1.6.1",
+    "jit-grunt": "^0.10.0",
     "prettier": "^3.0.3",
     "release-it": "^16.2.1",
     "rimraf": "^2.3.3",
