--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "junit-report-builder",
   "version": "3.2.1",
   "description": "Aimed at making it easier to build Jenkins compatible JUnit XML reports in plugins for testing frameworks",
-  "main": "src/index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "prepublish": "grunt",
+    "prepublish": "npm run build",
     "check": "prettier --check .",
     "format": "prettier --write .",
-    "test": "grunt",
-    "release": "release-it"
+    "test": "jest",
+    "release": "release-it",
+    "build": "tsc",
+    "lint": "tslint -c tslint.json src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,10 @@
     "report",
     "builder"
   ],
-  "author": "David Pärsson <david@parsson.se>",
+  "author": {
+    "name": "David Pärsson",
+    "email": "david@parsson.se"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/davidparsson/junit-report-builder/issues"
@@ -30,15 +35,24 @@
     "node": ">=16"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.12.7",
+    "@types/rimraf": "^4.0.5",
     "grunt": "^1.6.1",
     "grunt-contrib-jshint": "^3.2.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-jasmine-nodejs": "^1.6.1",
+    "jest": "^29.7.0",
     "jit-grunt": "^0.10.0",
     "prettier": "^3.0.3",
     "release-it": "^16.2.1",
-    "rimraf": "^2.3.3",
-    "time-grunt": "^1.2.1"
+    "rimraf": "^2.7.1",
+    "time-grunt": "^1.2.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "tslint": "^6.1.3",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "lodash": "^4.17.21",
@@ -55,5 +69,9 @@
         "npm run check"
       ]
     }
-  }
+  },
+  "files": [
+    "./lib/*"
+  ],
+  "typings": "./lib/index.d.ts"
 }
