--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "junit-report-builder",
   "version": "4.0.0",
   "description": "Aimed at making it easier to build Jenkins compatible JUnit XML reports in plugins for testing frameworks",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./lib/index.js"
+    }
+  },
   "main": "./lib/index.js",
   "scripts": {
     "prepublish": "npm run build",
     "check": "prettier --check .",
     "format": "prettier --write .",
-    "test": "jest",
+    "test": "vitest",
     "release": "release-it",
-    "build": "tsc",
-    "lint": "tslint -c tslint.json src/**/*.ts"
+    "build": "tsc --project ./tsconfig.build.json",
+    "lint": "tslint -c tslint.json src/**/*.ts",
+    "test:browser": "vitest"
   },
   "repository": {
     "type": "git",
@@ -35,22 +42,16 @@
     "node": ">=16"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
     "@types/rimraf": "^4.0.5",
-    "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "release-it": "^16.2.1",
     "rimraf": "^2.7.1",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "2.0.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "make-dir": "^3.1.0",
     "xmlbuilder": "^15.1.1"
   },
   "release-it": {
