--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "lib": ["es2015"],
+    "target": "es2020",
+    "module": "Node16",
+    "lib": ["es2020"],
 
-    "rootDir": "src",
+    "rootDir": ".",
     "outDir": "lib",
 
     "strict": true,
@@ -28,9 +27,9 @@
     "declaration": true,
 
     "pretty": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
 
-    "types": ["node", "jest"]
+    "types": ["node", "vitest/globals"]
   },
-  "include": ["typings/**/*", "src/**/*"]
+  "include": ["src/**/*", "spec/**/*"]
 }
