--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "junit-report-builder",
   "version": "4.0.0",
   "description": "Aimed at making it easier to build Jenkins compatible JUnit XML reports in plugins for testing frameworks",
-  "main": "./lib/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "prepublish": "npm run build",
     "check": "prettier --check .",
     "format": "prettier --write .",
     "test": "jest",
     "release": "release-it",
-    "build": "tsc",
+    "build": "rollup --configPlugin @rollup/plugin-typescript -c rollup.config.ts",
     "lint": "tslint -c tslint.json src/**/*.ts"
   },
   "repository": {
@@ -35,6 +35,9 @@
     "node": ">=16"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
@@ -43,6 +46,7 @@
     "prettier": "^3.0.3",
     "release-it": "^16.2.1",
     "rimraf": "^2.7.1",
+    "rollup": "^4.19.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
@@ -66,7 +70,9 @@
     }
   },
   "files": [
-    "./lib/*"
+    "./dist/*",
+    "README.md"
+    
   ],
-  "typings": "./lib/index.d.ts"
+  "typings": "./dist/index.d.ts"
 }
