--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
     "target": "es2018",
-    "module": "commonjs",
+    "module": "ESNext",
     "moduleResolution": "node",
     "lib": ["es2015"],
 
-    "rootDir": "src",
-    "outDir": "lib",
-
+    "outDir": "dist",
     "strict": true,
     "alwaysStrict": true,
     "strictFunctionTypes": true,
@@ -29,6 +27,7 @@
 
     "pretty": true,
     "esModuleInterop": true,
+    "noEmit": true,
 
     "types": ["node", "jest"]
   },
