--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "release": "release-it",
     "build": "rollup --configPlugin @rollup/plugin-typescript -c rollup.config.ts",
-    "lint": "tslint -c tslint.json src/**/*.ts"
+    "lint": "tslint -c tslint.json src/**/*.ts",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -43,6 +44,7 @@
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
     "@types/rimraf": "^4.0.5",
+    "husky": "^9.1.4",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "release-it": "^16.2.1",
