--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "release": "release-it",
     "build": "rollup --configPlugin @rollup/plugin-typescript -c rollup.config.ts",
     "lint": "tslint -c tslint.json src/**/*.ts",
-    "prepare": "husky"
+    "prepare": "husky",
+    "doctest": "markdown-doctest"
   },
   "repository": {
     "type": "git",
@@ -58,6 +59,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "make-dir": "^3.1.0",
+    "markdown-doctest": "^1.1.0",
     "xmlbuilder": "^15.1.1"
   },
   "release-it": {
@@ -68,7 +70,8 @@
       "before:init": [
         "npm run build",
         "npm test",
-        "npm run check"
+        "npm run check",
+        "npm run doctest"
       ]
     }
   },
